= Release notes v.8.6

== Table of Contents

* Fixed sonar alerts
* Bugfix: added missing PART transaction status
* Refactored xs2a-core-payments

== Fixed sonar alerts

Sonar alerts were fixed for classes:

- AesEcbInstanceFactoryImpl
- JweCryptoProviderImpl
- JweGsmInstanceFactoryImpl
- ChecksumCalculatingFactory
- OneOffConsentExpirationServiceTest
- AisConsentMapperTest
- CmsCorePaymentMapper
- CmsPsuPisServiceInternal
- SecurityDataService
- AesEcbCryptoProviderImpl
- ObsoletePiisConsentJpaRepository
- AisConsentConfirmationExpirationServiceImpl
- AccountAccessUpdater
- CmsAspspAisExportServiceInternal
- PisAuthService
- PisCancellationAuthService
- AdditionalPsuData
- PsuDataEmbeddable
- AccountAccess
- AisConsent
- PiisConsentEntity
- PisCommonPaymentIT
- AspspConsentDataPsuApiControllerIT
- CmsPsuApiDefaultValue
- CmsConstant
- CryptoConfig
- AisConsentIT
- AbstractContainerDatabaseTest
- BaseTest
- ServiceInstanceIdEventListener

== Bugfix: added missing PART transaction status

From now on, transaction status contains value PART

== Refactored xs2a-core-payments

From now on, xs2a-core-payments contains not generated models.