@@ -40,6 +40,18 @@ Sonar alerts were fixed for classes:
 - AbstractContainerDatabaseTest
 - BaseTest
 - ServiceInstanceIdEventListener
+- PisAbstractAuthService
+- CmsPsuPisMapperTest
+- PisCommonPaymentMapperTest
+- CmsPsuApiDefaultValue
+- AspspConsentDataApi
+- AuthorisationApi
+- PisCommonPaymentApi
+- CmsRestException
+- ConsentRestErrorHandler
+- AuthorisationController
+- PisCommonPaymentController
+- CmsConsentControllerTest
 
 == Bugfix: added missing PART transaction status
 
